<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog Konfirmasi Pulihkan Item -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/background_primary"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/img_pulihkan_arsip"
            android:contentDescription="@string/cd_restore_item_image"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_restore_item_dialog"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/msg_restore_item_dialog"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/text_secondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="37sp"
                android:layout_weight="1"
                android:background="@color/text_secondary"
                android:text="@string/btn_cancel"
                android:textColor="@color/background_primary" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:backgroundTint="@color/teal_700"
                android:text="@string/btn_restore"
                android:textColor="@color/white"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
